# django_first_app

./: pyproject.toml
mysite/: settings.py
polls/: models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: index.html
templates/admin/: base_site.html
