[tool.poetry]
name = "django_first_app"
version = "0.1.0"
description = ""
authors = ["Aleksey94Dan <danilchenko.aleksey94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
